fix bad z-index on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -1564,8 +1564,6 @@ button {
     // pointer-events: none;
     // left: -250px;
 
-    z-index: 1;
-
     -webkit-user-select: none;
     user-select: none;
     a {
@@ -1663,7 +1661,6 @@ button {
   .hero-section {
     width: 100%;
     height: 100vh;
-    z-index: -3;
     .hero-wrapper {
       width: 100%;
       .hero-title {
@@ -2215,7 +2212,6 @@ button {
       .hero-buttons {
         position: fixed;
         top: 87%;
-        z-index: 2;
         a {
           button {
             width: 100%;
